crates/keron-lang/tests/corpus/errors/check/empty_list_inferred.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: cannot infer type of empty list; add a `List<T>` annotation
  --> 1:10
  |
1 | val xs = []
  |          ^^^
